tests/miniJava/neg/004294_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { length int [] java ( ) { return 0 ; } }
